# vuegen

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  apicall_config.yaml  basic_example_vuegen_demo_notebook_config.yaml  chatbot_config.yaml  conf.py  earth_microbiome_vuegen_demo_notebook_config.yaml  index.md  pyproject.toml  quarto_report.qmd  report_config_micw2graph.yaml  report_metadata.yaml  report_metadata_micw2graph.yaml  requirements.txt  setup.cfg  setup.py  split_readme.py  vuegen_basic_case_study.ipynb  vuegen_case_study_earth_microbiome.ipynb
docs/: .gitignore  Makefile  README.md  conf.py  example_report.md  index.md  index.rst  requirements.txt  split_readme.py  vuegen_apicall_case_study.ipynb  vuegen_apicall_case_study_configfile.md  vuegen_basic_case_study.ipynb  vuegen_basic_case_study_configfile.md  vuegen_case_study_earth_microbiome.ipynb  vuegen_chatbot_case_study.ipynb  vuegen_chatbot_case_study_configfile.md  vuegen_demo.ipynb  vuegen_earth_microbiome_case_study.ipynb  vuegen_earth_microbiome_case_study_configfile.md
example_config_files/: Earth_microbiome_vuegen_demo_notebook_config.yaml
example_data/: Network_Visualization.html  multi_line_plot_altair.json  network2.html  test_md.md
executables/: README.md  vuegen.spec
gui/: Makefile  README.md  app.py  copy_python_executable.py
report/: document_reportview.py  main.py  metadata_manager.py  quarto_reportview.py  report.py  streamlit_reportview.py
streamlit_report/: README.md
tests/: test_module_imports.py
vuegen/: __init__.py  (+10 more)
(+108 files in other folders)
